--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-  
   <head>
     {% load staticfiles %}
     <meta charset="utf-8">
@@ -8,10 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.83.1">
-    <title>Reggie Espino</title>
-
-
-
+    <title>{{ blog.title }}</title>
     
 
     <!-- Bootstrap core CSS -->
@@ -19,7 +15,6 @@
 <link href="/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <!-- Favicons -->
-
 <meta name="theme-color" content="#7952b3">
 
 
@@ -58,49 +53,23 @@
               <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+              <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
             </li>
           </ul>
         </div>
       </nav>
 </header>
 
-<main>
 
-  <section class="py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Hi, I am Reggie Espino.</h1>
-        <p class="lead text-muted">I love girls and playing DOTA. My specialty is KFC and I will teach it here in this webiste </p>
-        <p>
-          <a href="mailto:reggie.espino@gmail.com" class="btn btn-primary my-2">Email me baby</a>
-        </p>
-        <img src="{% static 'picture.jpeg' %}" height="300" />
-      </div>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
+<main role="main">
     <div class="container">
 
-      <div class="row">
-
-        {% for job in jobs.all %}
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img class ="card-img-top" src="{{ job.image.url }}"/>
-
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-
-
-      </div>
-    </div>
-  </div>
+    <h1 class="text-center pt-3">{{ blog.title }}</h1>    
+    <p class="text-center">{{ blog.pub_date }}</p>
+    <img class="img-fluid" src="{{ blog.image.url }}"/>
+    <br />
+    <br />
+    <p>{{ blog.body }}</p>
 
 </main>
 
