--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -70,8 +70,8 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Hi, I am Reggie Espino.</h1>
-        <p class="lead text-muted">I love girls and playing DOTA. My specialty is KFC and I will teach it here in this webiste </p>
+        <h1 class="fw-light">Hi, I am Arden Sarmiento.</h1>
+        <p class="lead text-muted"> In the future, I want to be a Data Analyst. In this website, I want to share with you my journey</p>
         <p>
           <a href="mailto:reggie.espino@gmail.com" class="btn btn-primary my-2">Email me baby</a>
         </p>
