--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.83.1">
-    <title>Reggie Espino</title>
+    <title>Arden Sarmiento</title>
 
 
 
@@ -45,14 +45,14 @@
     
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'home' %}">Reggie Espino</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Arden Sarmiento</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.linkedin.com/in/reggie-espino-831b70144">LinkedIn</a>
+              <a class="nav-link" href="https://www.linkedin.com/in/ardensarmiento">LinkedIn</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
@@ -73,9 +73,9 @@
         <h1 class="fw-light">Hi, I am Arden Sarmiento.</h1>
         <p class="lead text-muted"> In the future, I want to be a Data Analyst. In this website, I want to share with you my journey</p>
         <p>
-          <a href="mailto:reggie.espino@gmail.com" class="btn btn-primary my-2">Email me baby</a>
+          <a href="mailto:ardenjohn.sarmiento@gmail.com" class="btn btn-primary my-2">Email me</a>
         </p>
-        <img src="{% static 'picture.jpeg' %}" height="300" />
+        <img src="{% static 'picture.jpg' %}" height="300" />
       </div>
     </div>
   </section>
@@ -106,7 +106,7 @@
 
 <footer class="text-muted py-5">
   <div class="container text-center">
-    <p>© Reggie Espino {% now "Y" %}</p>
+    <p>© Arden Sarmiento {% now "Y" %}</p>
   </div>
 </footer>
 
