--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.83.1">
-    <title>Reggie's Blog</title>
+    <title>Arden Sarmiento</title>
     
 
     <!-- Bootstrap core CSS -->
@@ -40,14 +40,14 @@
     
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'home' %}">Reggie Espino</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Arden Sarmiento</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.linkedin.com/in/reggie-espino-831b70144">LinkedIn</a>
+              <a class="nav-link" href="https://www.linkedin.com/in/ardensarmiento">LinkedIn</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
@@ -64,7 +64,7 @@
 <main role="main">
     <div class="container">
 
-    <h1 class="text-center pt-3">Welcome to Reggie's Blog</h1>
+    <h1 class="text-center pt-3">Welcome to Arden's Blog</h1>
     <br/>
     <br/>
     <h2>Latest Posts</h2>
@@ -87,7 +87,7 @@
 
 <footer class="text-muted py-5">
   <div class="container text-center">
-    <p>© Reggie Espino {% now "Y" %}</p>
+    <p>© Arden Sarmiento {% now "Y" %}</p>
   </div>
 </footer>
 
