--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -40,14 +40,14 @@
     
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'home' %}">Reggie Espino</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Arden Sarmiento</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.linkedin.com/in/reggie-espino-831b70144">LinkedIn</a>
+              <a class="nav-link" href="https://www.linkedin.com/in/ardensarmiento">LinkedIn</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
@@ -75,7 +75,7 @@
 
 <footer class="text-muted py-5">
   <div class="container text-center">
-    <p>© Reggie Espino {% now "Y" %}</p>
+    <p>© Arden Sarmiento {% now "Y" %}</p>
   </div>
 </footer>
 
